# .github

./: README.md  pyproject.toml
.github/config/: .markdownlint-cli2.jsonc
.github/scripts/: __init__.py  decide_mypy_target.py  detect_quality_tools.py  determine_next_version.py  update_changelog.py  update_pyproject_version.py  update_readme_version.py
.github/workflows/: build.yml  lint-markdown.yml  update-version.yml  uv-qualify.yml
sample-reusable-workflows/: build.yml  update-version.yml  uv-qualify.yml
