[project]
name = "github"
version = "0.1.0"
description = "Manage Python Scripts for GitHub Actions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["mypy>=1.19.1", "ruff>=0.14.9"]

[tool.ruff]
line-length = 88
target-version = "py313"
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "CPY001",
  "COM812",
  # D系(Docstring)のポリシーは外部公開する部分は unignore していきたい
  "D100", # パブリックモジュールの docstring がない
  "D103", # パブリック関数の docstring がない
  "D203", # D211 と競合するため無効化
  "D213", # D212 と競合するため無効化
  "D415", # Docstring の最初の文がピリオドで終わっていない（日本語では意味がないため無効化）
  "T201", # print 文の使用を禁止
]

[tool.ruff.lint.flake8-tidy-imports]
# 相対インポートを禁止し、絶対インポートを強制する
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
# C901 を有効化する代わりに閾値を上げる
max-complexity = 18

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
files = [".github/scripts"]
